--- a/manifests/registry.yaml
+++ b/manifests/registry.yaml
@@ -60,13 +60,17 @@ spec:
   type: NodePort
 ---
 
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: registry
   labels:
     app: registry
 spec:
+  replicas: 1 
+  selector:
+    matchLabels:
+      app: registry
   strategy:
     type: Recreate
   template:
